# android-init-standalone

./: CMakeLists.txt  README.md
include/: _system_properties.h  ashmem.h
internal/: CMakeLists.txt  ashmem.c  atomics.c  system_properties.c
src/: CMakeLists.txt  bootchart.c  builtins.c  devices.c  init.c  logo.c  parser.c  property_service.c  util.c
